# libc-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  doxyconf  exports.sh
docs/: index.html
docs/html/: dir_d44c64559bbebec7f509842c48db8b23.html  example_8h.html  example_8h__incl.md5  example_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html
docs/html/search/: all_0.js  all_1.js  functions_0.js  searchdata.js
docs/latex/: dir_d44c64559bbebec7f509842c48db8b23.tex  example_8h.tex  example_8h__incl.md5  files.tex  refman.tex
drivers/: Makefile  rw_main.c
include/: example.h
src/: CMakeLists.txt  example.c
test/: CMakeLists.txt  example_tests.c
